--- a/production/sfbay/smart/smart-baseline-more-congestion-less-transit-vott.conf
+++ b/production/sfbay/smart/smart-baseline-more-congestion-less-transit-vott.conf
@@ -10,7 +10,7 @@ include "../../common/matsim.conf"
 ##################################################################
 # Agentsim
 ##################################################################
-beam.agentsim.simulationName = "sfbay-smart-base"
+beam.agentsim.simulationName = "sfbay-smart-base-congested-transit"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.1
 #beam.agentsim.numAgents = 10
 beam.agentsim.firstIteration = 0
@@ -38,7 +38,7 @@ beam.agentsim.agents.modalBehaviors.modeVotMultiplier.CAV = 0.35 // Does not eff
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.bike = 1.0
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.drive = 1.0
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.rideHail = 1.0
-beam.agentsim.agents.modalBehaviors.modeVotMultiplier.transit = 1.0
+beam.agentsim.agents.modalBehaviors.modeVotMultiplier.transit = 0.5
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.waiting = 2.0
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.walk = 1.0
 # Sharing factors for 'LOW' Scenario
@@ -113,7 +113,7 @@ beam.agentsim.populationAdjustment="DEFAULT_ADJUSTMENT"
 # Physsim
 ###########################
 beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/../r5-simple-no-local/physsim-network.xml"
-beam.physsim.flowCapacityFactor = 0.065
+beam.physsim.flowCapacityFactor = 0.05
 beam.physsim.storageCapacityFactor = 1.2
 beam.physsim.writeMATSimNetwork = true
 beam.physsim.ptSampleSize = 0.03
