--- a/production/sfbay/smart/smart-baseline-more-congestion.conf
+++ b/production/sfbay/smart/smart-baseline-more-congestion.conf
@@ -10,7 +10,7 @@ include "../../common/matsim.conf"
 ##################################################################
 # Agentsim
 ##################################################################
-beam.agentsim.simulationName = "sfbay-smart-base"
+beam.agentsim.simulationName = "sfbay-smart-base-congested"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.1
 #beam.agentsim.numAgents = 10
 beam.agentsim.firstIteration = 0
@@ -113,7 +113,7 @@ beam.agentsim.populationAdjustment="DEFAULT_ADJUSTMENT"
 # Physsim
 ###########################
 beam.physsim.inputNetworkFilePath = ${beam.inputDirectory}"/../r5-simple-no-local/physsim-network.xml"
-beam.physsim.flowCapacityFactor = 0.065
+beam.physsim.flowCapacityFactor = 0.05
 beam.physsim.storageCapacityFactor = 1.2
 beam.physsim.writeMATSimNetwork = true
 beam.physsim.ptSampleSize = 0.03
