--- a/production/sfbay/smart/smart-baseline.conf
+++ b/production/sfbay/smart/smart-baseline.conf
@@ -185,8 +185,8 @@ beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 
 beam.agentsim.agents.rideHail.repositioningManager.name="DEMAND_FOLLOWING_REPOSITIONING_MANAGER"
 beam.agentsim.agents.rideHail.repositioningManager.timeout=300
 # DEMAND_FOLLOWING_REPOSITIONING_MANAGER
-beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand=3.4
-beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemandForCAVs=1.7
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemand=0.000001
+beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.sensitivityOfRepositioningToDemandForCAVs=0.000001
 beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.fractionOfClosestClustersToConsider=0.2
 beam.agentsim.agents.rideHail.repositioningManager.demandFollowingRepositioningManager.numberOfClustersForDemand=30
 # REPOSITIONING_LOW_WAITING_TIMES
@@ -391,7 +391,7 @@ beam.routing {
   }
 }
 
-beam.physsim.overwriteLinkParamPath = ${beam.inputDirectory}"/../calibration/links-overwrite/bad_morning_and_night_links_2x_cap.csv"
+#beam.physsim.overwriteLinkParamPath = ${beam.inputDirectory}"/../calibration/links-overwrite/bad_morning_and_night_links_2x_cap.csv"
 ##################################################################
 # Calibration
 ##################################################################
