--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #runName=rw/prod-dev/calib-11thAug19-65
 runName=bl/prod-dev/run-1
 #runName=basline-test-after-merge-2
-beamBranch=bl/ridehail-geofence-issue
+beamBranch=bl/#ridehail-geofence-issue
 beamCommit=7878dcb4a1f36677c197222622e05313d2a5e3db
 # deployMode=config | experiment | execute
 #deployMode=experiment
