--- a/production/sfbay/smart/smart-b-lowtech-2040-pooling-base.conf
+++ b/production/sfbay/smart/smart-b-lowtech-2040-pooling-base.conf
@@ -2,17 +2,18 @@
 include "smart-b-lowtech-2040.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "haitam/production-sfbay-develop-pooling-under-scrutiny/pooling-base"
+beam.agentsim.simulationName = "haitam/production-sfbay-develop-pooling-under-scrutiny/batch1/pooling-base"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 0.1
 beam.agentsim.schedulerParallelismWindow = 150
 beam.agentsim.lastIteration = 15
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = -4.5
-beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxWaitTimeInSec = 900
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxTravelTimeDelayAsFraction = 0.50
-beam.agentsim.agents.rideHail.allocationManager.alonsoMora.maxSizeOfSolutionSpacePerVehicle = 50
+
 beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.03
+
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 151
+beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 900
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction = 0.50
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle = 50
 
 beam.beamskimmer.writeObservedSkimsInterval = 5
 beam.beamskimmer.writeAllModeSkimsForPeakNonPeakPeriodsInterval = 0
