--- a/production/sfbay/smart/smart-b-hightech-2040-pooling-base.conf
+++ b/production/sfbay/smart/smart-b-hightech-2040-pooling-base.conf
@@ -1,12 +1,12 @@
 
-include "smart-b-lowtech-2040.conf"
+include "smart-b-hightech-2040.conf"
 
 ############# VARIABLES
-beam.agentsim.simulationName = "haitam/production-sfbay-develop-pooling-under-scrutiny/batch2/b5-pooling-base"
+beam.agentsim.simulationName = "haitam/production-sfbay-develop-pooling-under-scrutiny/batch2/b6-pooling-base"
 beam.agentsim.schedulerParallelismWindow = 150
 beam.agentsim.lastIteration = 15
 
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.03
+beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet = 0.033
 
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 151
 beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
