--- a/test/input/sf-light/sf-light-1k.conf
+++ b/test/input/sf-light/sf-light-1k.conf
@@ -11,7 +11,7 @@ include "../common/matsim.conf"
 beam.agentsim.simulationName = "sf-light-1k-xml"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 1.0
 beam.agentsim.firstIteration = 0
-beam.agentsim.lastIteration = 20
+beam.agentsim.lastIteration = 0
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.timeBinSize = 3600
 beam.agentsim.startTime = "00:00:00"
@@ -121,7 +121,7 @@ beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.rad
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="Car"
 beam.agentsim.agents.rideHail.initialization.procedural.numDriversAsFractionOfPopulation=0.2
 # If FILE, use this param
-beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet.csv"
+beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet-fenced.csv"
 # Ride Hailing General Params
 beam.agentsim.agents.rideHail.defaultBaseCost=1.8
 beam.agentsim.agents.rideHail.defaultCostPerMile=0.91
