--- a/test/input/sf-light/sf-light.conf
+++ b/test/input/sf-light/sf-light.conf
@@ -114,7 +114,7 @@ beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.rad
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="Car"
 beam.agentsim.agents.rideHail.initialization.procedural.numDriversAsFractionOfPopulation=0.5
 # If FILE, use this param
-beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet.csv"
+beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet-fenced.csv"
 # Ride Hailing General Params
 beam.agentsim.agents.rideHail.defaultBaseCost=1.8
 beam.agentsim.agents.rideHail.defaultCostPerMile=0.91
@@ -131,7 +131,7 @@ beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
 # priceAdjustmentStrategy(KEEP_PRICE_LEVEL_FIXED_AT_ONE | CONTINUES_DEMAND_SUPPLY_MATCHING)
 beam.agentsim.agents.rideHail.surgePricing.priceAdjustmentStrategy="KEEP_PRICE_LEVEL_FIXED_AT_ONE"
 # allocationManager(DEFAULT_MANAGER | STANFORD_V1 | BUFFERED_IMPL_TEMPLATE)
-beam.agentsim.agents.rideHail.allocationManager.name="DEFAULT_MANAGER"
+beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 200
 # repositioningManager can be DEFAULT_REPOSITIONING_MANAGER | DEMAND_FOLLOWING_REPOSITIONING_MANAGER | REPOSITIONING_LOW_WAITING_TIMES
 beam.agentsim.agents.rideHail.repositioningManager.name="DEFAULT_REPOSITIONING_MANAGER"
