--- a/production/sfbay/smart/smart-baseline-2010.conf
+++ b/production/sfbay/smart/smart-baseline-2010.conf
@@ -14,6 +14,6 @@ beam.agentsim.lastIteration = 15
 ##################################################################
 # Agentsim
 ##################################################################
-beam.agentsim.simulationName = "sfbay-smart-base-2010"
+beam.agentsim.simulationName = "haitam/beam-skim-on-prod/sfbay-smart-base-2010-old-skim"
 beam.exchange.scenario.folder=${beam.inputDirectory}"/../urbansim/2010/baseline/"
 
