--- a/test/input/sf-light/sf-light-5k.conf
+++ b/test/input/sf-light/sf-light-5k.conf
@@ -28,7 +28,7 @@ beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_interce
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 0.0
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = -1.5
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 20.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.bike_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.rideHailPooled = 2.0
@@ -131,8 +131,11 @@ beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
 # priceAdjustmentStrategy(KEEP_PRICE_LEVEL_FIXED_AT_ONE | CONTINUES_DEMAND_SUPPLY_MATCHING)
 beam.agentsim.agents.rideHail.surgePricing.priceAdjustmentStrategy="KEEP_PRICE_LEVEL_FIXED_AT_ONE"
 # allocationManager(DEFAULT_MANAGER | STANFORD_V1 | BUFFERED_IMPL_TEMPLATE)
-beam.agentsim.agents.rideHail.allocationManager.name="DEFAULT_MANAGER"
-beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 200
+beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.waitingTimeInSec = 1200
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.travelTimeDelayAsFraction= 0.5
+beam.agentsim.agents.rideHail.allocationManager.alonsoMora.solutionSpaceSizePerVehicle = 4
+beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 300
 # repositioningManager can be DEFAULT_REPOSITIONING_MANAGER | DEMAND_FOLLOWING_REPOSITIONING_MANAGER | REPOSITIONING_LOW_WAITING_TIMES
 beam.agentsim.agents.rideHail.repositioningManager.name="DEFAULT_REPOSITIONING_MANAGER"
 beam.agentsim.agents.rideHail.repositioningManager.timeout=300
