--- a/build.gradle
+++ b/build.gradle
@@ -546,20 +546,30 @@ docker{
     }
 
     javaApplication {
-        baseImage = 'continuumio/miniconda3'
+        baseImage = 'beammodel/miniconda3'
         maintainer = 'LBNL Beam Team'
-        tag = "beammodel/beam:$version"
+        tag = "beammodel/beam:workshop"
     }
 }
 
+
 dockerDistTar {
-    instruction 'RUN apt-get update && apt-get -y install openjdk-8-jdk && rm -rf /var/lib/apt/lists/*'
+    instruction 'RUN apt-get update && apt-get -y install python3 python3-pip python3-rtree libproj-dev proj-data proj-bin libgeos-dev npm'
+    instruction 'RUN pip3 install --upgrade setuptools'
+    //instruction 'RUN apt-get -y install '
+    //instruction 'RUN apt-get -y install python-pip'
+    instruction 'RUN pip3 install numpy pandas cython sklearn matplotlib mapclassify descartes geopandas contextily plotly collections-extended psutil requests'
+    //instruction 'RUN pip install pandas'
+    //instruction 'ENV PYTHONPATH=/usr/lib/python3.7/site-packages'
+    addFile 'src/main/python/events_analysis/', 'src/main/python/events_analysis/'
     addFile 'test/', 'test/'
 }
 
 dockerCopyDistResources {
+    from('src/main/python/events_analysis/') {
+        into('src/main/python/events_analysis/')
+    }
     from('test/') {
         into('test/')
     }
 }
-
