--- a/test/input/sf-light/sf-light-0.5k.conf
+++ b/test/input/sf-light/sf-light-0.5k.conf
@@ -28,10 +28,13 @@ beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_interce
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 0.0
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = -1.5
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 20.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.bike_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.rideHailPooled = 2.0
+beam.agentsim.agents.parking.mulitnomialLogit.params.distance_multiplier = 1.0
+beam.agentsim.agents.parking.mulitnomialLogit.params.installed_capacity_multiplier = 0.001
+beam.agentsim.agents.parking.mulitnomialLogit.params.parking_costs_price_multiplier = 4.5
 beam.agentsim.agents.modalBehaviors.lccm.filePath = ${beam.inputDirectory}"/lccm-long.csv"
 beam.agentsim.agents.modeIncentive.filePath = ${beam.inputDirectory}"/incentives.csv"
 beam.agentsim.agents.ptFare.filePath = ${beam.inputDirectory}"/ptFares.csv"
@@ -130,9 +133,9 @@ beam.agentsim.agents.rideHail.surgePricing.surgeLevelAdaptionStep=0.1
 beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
 # priceAdjustmentStrategy(KEEP_PRICE_LEVEL_FIXED_AT_ONE | CONTINUES_DEMAND_SUPPLY_MATCHING)
 beam.agentsim.agents.rideHail.surgePricing.priceAdjustmentStrategy="KEEP_PRICE_LEVEL_FIXED_AT_ONE"
-# allocationManager(DEFAULT_MANAGER | STANFORD_V1 | BUFFERED_IMPL_TEMPLATE)
-beam.agentsim.agents.rideHail.allocationManager.name="DEFAULT_MANAGER"
-beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 0
+# allocationManager(DEFAULT_MANAGER | POOLING_ALONSO_MORA)
+beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
+beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 200
 # repositioningManager can be DEFAULT_REPOSITIONING_MANAGER | DEMAND_FOLLOWING_REPOSITIONING_MANAGER | REPOSITIONING_LOW_WAITING_TIMES
 beam.agentsim.agents.rideHail.repositioningManager.name="DEFAULT_REPOSITIONING_MANAGER"
 beam.agentsim.agents.rideHail.repositioningManager.timeout=300
@@ -167,10 +170,11 @@ beam.outputs.addTimestampToOutputDirectory = true
 beam.outputs.writePlansInterval = 1
 beam.outputs.writeEventsInterval = 1
 beam.outputs.writeLinkTraversalInterval = 0
-beam.outputs.writeAnalysis = false
+beam.outputs.generalizedLinkStats.interval = 0
+beam.outputs.writeSkimsInterval = 0
 
 # The remaining params customize how events are written to output files
-beam.outputs.events.fileOutputFormats = "csv.gz,xml.gz,parquet" # valid options: xml(.gz) , csv(.gz), none - DEFAULT: csv.gz
+beam.outputs.events.fileOutputFormats = "csv.gz,xml.gz" # valid options: xml(.gz) , csv(.gz), none - DEFAULT: csv.gz
 
 # Events Writing Logging Levels:
 # Any event types not explicitly listed in overrideWritingLevels take on defaultWritingLevel
@@ -236,8 +240,8 @@ beam.debug.stuckAgentDetection {
     },
     {
       actorTypeToMaxNumberOfMessages {
-        population = 80
-        rideHailAgent = 104
+        population = 80,
+        rideHailAgent = 104,
         transitDriverAgent = 114
       }
       markAsStuckAfterMs = 20000
@@ -245,8 +249,8 @@ beam.debug.stuckAgentDetection {
     },
     {
       actorTypeToMaxNumberOfMessages {
-        population = 80
-        rideHailAgent = 104
+        population = 80,
+        rideHailAgent = 104,
         transitDriverAgent = 114
       }
       markAsStuckAfterMs = 20000
