--- a/test/input/sf-light/sf-light-10k.conf
+++ b/test/input/sf-light/sf-light-10k.conf
@@ -8,10 +8,10 @@ include "../common/matsim.conf"
 ##################################################################
 # Agentsim
 ##################################################################
-beam.agentsim.simulationName = "sf-light-10k-xml"
+beam.agentsim.simulationName = "haitam/production-sfbay-develop-pooling-under-scrutiny/batch5/10k-optimal"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 1.0
 beam.agentsim.firstIteration = 0
-beam.agentsim.lastIteration = 20
+beam.agentsim.lastIteration = 15
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.timeBinSize = 3600
 beam.agentsim.startTime = "00:00:00"
@@ -28,10 +28,13 @@ beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_interce
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 0.0
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = -1.5
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 20.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.bike_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.modeVotMultiplier.rideHailPooled = 2.0
+beam.agentsim.agents.parking.mulitnomialLogit.params.distance_multiplier = 1.0
+beam.agentsim.agents.parking.mulitnomialLogit.params.installed_capacity_multiplier = 0.001
+beam.agentsim.agents.parking.mulitnomialLogit.params.parking_costs_price_multiplier = 4.5
 beam.agentsim.agents.modalBehaviors.lccm.filePath = ${beam.inputDirectory}"/lccm-long.csv"
 beam.agentsim.agents.modeIncentive.filePath = ${beam.inputDirectory}"/incentives.csv"
 beam.agentsim.agents.ptFare.filePath = ${beam.inputDirectory}"/ptFares.csv"
@@ -76,7 +79,11 @@ beam.physsim.linkStatsWriteInterval = 1
 beam.physsim.linkStatsBinSize = 3600
 beam.physsim.ptSampleSize = 0.03
 beam.physsim.jdeqsim.agentSimPhysSimInterfaceDebugger.enabled = false
-beam.physsim.skipPhysSim = true
+beam.physsim.skipPhysSim = false
+beam.physsim.jdeqsim.cacc.enabled = false
+beam.physsim.jdeqsim.cacc.minRoadCapacity = 2000
+beam.physsim.jdeqsim.cacc.minSpeedMetersPerSec = 20
+beam.physsim.jdeqsim.cacc.speedAdjustmentFactor = 1.0
 
 ###########################
 # Replanning
@@ -112,7 +119,7 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "HOME"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="Car"
-beam.agentsim.agents.rideHail.initialization.procedural.numDriversAsFractionOfPopulation=0.03
+beam.agentsim.agents.rideHail.initialization.procedural.numDriversAsFractionOfPopulation=0.2
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet.csv"
 # Ride Hailing General Params
@@ -130,8 +137,8 @@ beam.agentsim.agents.rideHail.surgePricing.surgeLevelAdaptionStep=0.1
 beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
 # priceAdjustmentStrategy(KEEP_PRICE_LEVEL_FIXED_AT_ONE | CONTINUES_DEMAND_SUPPLY_MATCHING)
 beam.agentsim.agents.rideHail.surgePricing.priceAdjustmentStrategy="KEEP_PRICE_LEVEL_FIXED_AT_ONE"
-# allocationManager(DEFAULT_MANAGER | STANFORD_V1 | BUFFERED_IMPL_TEMPLATE | POOLING_ALONSO_MORA)
-beam.agentsim.agents.rideHail.allocationManager.name="DEFAULT_MANAGER"
+# allocationManager(DEFAULT_MANAGER | POOLING_ALONSO_MORA)
+beam.agentsim.agents.rideHail.allocationManager.name="POOLING_ALONSO_MORA"
 beam.agentsim.agents.rideHail.allocationManager.requestBufferTimeoutInSeconds = 200
 # repositioningManager can be DEFAULT_REPOSITIONING_MANAGER | DEMAND_FOLLOWING_REPOSITIONING_MANAGER | REPOSITIONING_LOW_WAITING_TIMES
 beam.agentsim.agents.rideHail.repositioningManager.name="DEFAULT_REPOSITIONING_MANAGER"
@@ -165,8 +172,10 @@ beam.outputs.addTimestampToOutputDirectory = true
 
 # To keep all logging params in one place, BEAM overrides MATSim params normally in the controller config module
 beam.outputs.writePlansInterval = 1
-beam.outputs.writeEventsInterval = 1
+beam.outputs.writeEventsInterval = 10
 beam.outputs.writeLinkTraversalInterval = 0
+beam.outputs.generalizedLinkStats.interval = 0
+beam.outputs.writeSkimsInterval = 0
 
 # The remaining params customize how events are written to output files
 beam.outputs.events.fileOutputFormats = "csv.gz,xml" # valid options: xml(.gz) , csv(.gz), none - DEFAULT: csv.gz
@@ -179,8 +188,8 @@ beam.outputs.stats.binSize = 3600
 ##################################################################
 # Debugging
 ##################################################################
-beam.debug.debugEnabled = true
-beam.debug.actor.logDepth = 10
+beam.debug.debugEnabled = false
+beam.debug.actor.logDepth = 0
 
 beam.debug.stuckAgentDetection {
   checkIntervalMs = 200
@@ -235,8 +244,8 @@ beam.debug.stuckAgentDetection {
     },
     {
       actorTypeToMaxNumberOfMessages {
-        population = 80
-        rideHailAgent = 104
+        population = 80,
+        rideHailAgent = 104,
         transitDriverAgent = 114
       }
       markAsStuckAfterMs = 20000
@@ -244,8 +253,8 @@ beam.debug.stuckAgentDetection {
     },
     {
       actorTypeToMaxNumberOfMessages {
-        population = 80
-        rideHailAgent = 104
+        population = 80,
+        rideHailAgent = 104,
         transitDriverAgent = 114
       }
       markAsStuckAfterMs = 20000
@@ -268,7 +277,7 @@ beam.debug.stuckAgentDetection {
 ##################################################################
 beam.spatial = {
   localCRS = "epsg:26910"  # what crs to use for distance calculations, must be in units of meters
-  boundingBoxBuffer = 20000 # meters of buffer around network for defining extend of spatial indices
+  boundingBoxBuffer = 10000 # meters of buffer around network for defining extend of spatial indices
 }
 
 ##################################################################
