--- a/build.gradle
+++ b/build.gradle
@@ -117,7 +117,7 @@ dependencies {
     }
 
     ////////////////////////////
-    // Java or-tools-mac
+    // Java dependencies
     ////////////////////////////
     compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
     compile group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '4.1.0'
