--- a/test/input/sf-light/urbansim-10k.conf
+++ b/test/input/sf-light/urbansim-10k.conf
@@ -26,8 +26,8 @@ beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.car_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept = 0.0
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 5.0
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 20.0
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 0.0
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.bike_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.lccm.filePath = ${beam.inputDirectory}"/lccm-long.csv"
@@ -59,7 +59,9 @@ beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/sample/
 beam.agentsim.agents.vehicles.sharedFleets = []
 #TAZ params
 beam.agentsim.taz.filePath=${beam.inputDirectory}"/taz-centers.csv.gz"
-beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/taz-parking.csv.gz"
+beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/sf-taz-parking-rich-50.csv"
+beam.agentsim.taz.parkingStallCountScalingFactor = 0.001
+beam.agentsim.taz.parkingCostScalingFactor = 1.0
 # SurgePricing parameters
 beam.agentsim.agents.rideHail.surgePricing.surgeLevelAdaptionStep=0.1
 beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
@@ -120,7 +122,9 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "HOME"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="Car"
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet=1.0
+beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet=0.1
+beam.agentsim.agents.rideHail.initialization.parking.filePath = ${beam.inputDirectory}"/sf-depot-parking-rich-50.csv"
+
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet.csv"
 # Ride Hailing General Params
