--- a/test/input/sf-light/urbansim-1k.conf
+++ b/test/input/sf-light/urbansim-1k.conf
@@ -11,7 +11,7 @@ include "../common/matsim.conf"
 beam.agentsim.simulationName = "urbansim-1k"
 beam.agentsim.agentSampleSizeAsFractionOfPopulation = 1.0
 beam.agentsim.firstIteration = 0
-beam.agentsim.lastIteration = 0
+beam.agentsim.lastIteration = 10
 beam.agentsim.thresholdForWalkingInMeters = 100
 beam.agentsim.timeBinSize = 3600
 beam.agentsim.endTime = "30:00:00"
@@ -24,7 +24,7 @@ beam.agentsim.agents.modalBehaviors.defaultValueOfTime = 8.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.transfer = -1.4
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.car_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.walk_transit_intercept = 2.0
-beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = 2.5
+beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.drive_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_transit_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_intercept = 0.0
 beam.agentsim.agents.modalBehaviors.mulitnomialLogit.params.ride_hail_pooled_intercept = 0.0
@@ -51,6 +51,7 @@ beam.exchange.scenario {
 }
 #BeamVehicles Params
 beam.agentsim.agents.population.useVehicleSampling = true
+beam.agentsim.agents.vehicles.fractionOfInitialVehicleFleet = 1.0
 beam.agentsim.agents.vehicles.vehicleAdjustmentMethod = "INCOME_BASED"
 beam.agentsim.agents.vehicles.linkToGradePercentFilePath = ${beam.inputDirectory}"/r5/linkToGradePercent.csv"
 beam.agentsim.agents.vehicles.fuelTypesFilePath = ${beam.inputDirectory}"/beamFuelTypes.csv"
@@ -59,7 +60,9 @@ beam.agentsim.agents.vehicles.vehiclesFilePath = ${beam.inputDirectory}"/sample/
 beam.agentsim.agents.vehicles.sharedFleets = []
 #TAZ params
 beam.agentsim.taz.filePath=${beam.inputDirectory}"/taz-centers.csv.gz"
-beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/taz-parking.csv.gz"
+beam.agentsim.taz.parkingFilePath = ${beam.inputDirectory}"/sf-taz-parking-rich-50.csv"
+beam.agentsim.taz.parkingStallCountScalingFactor = 0.001
+beam.agentsim.taz.parkingCostScalingFactor = 1.0
 # SurgePricing parameters
 beam.agentsim.agents.rideHail.surgePricing.surgeLevelAdaptionStep=0.1
 beam.agentsim.agents.rideHail.surgePricing.minimumSurgeLevel=0.1
@@ -120,7 +123,8 @@ beam.agentsim.agents.rideHail.initialization.initType = "PROCEDURAL"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.name = "HOME"
 beam.agentsim.agents.rideHail.initialization.procedural.initialLocation.home.radiusInMeters = 500
 beam.agentsim.agents.rideHail.initialization.procedural.vehicleTypeId="Car"
-beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet=0.5
+beam.agentsim.agents.rideHail.initialization.procedural.fractionOfInitialVehicleFleet=0.1
+beam.agentsim.agents.rideHail.initialization.parking.filePath = ${beam.inputDirectory}"/sf-depot-parking-rich-50.csv"
 # If FILE, use this param
 beam.agentsim.agents.rideHail.initialization.filePath=${beam.inputDirectory}"/rideHailFleet.csv"
 # Ride Hailing General Params
